--- a/objetivo.html
+++ b/objetivo.html
@@ -71,7 +71,7 @@ integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIe
                   </tr>
                   <tr>
                     <th scope="row"></th>
-                    <th scope="row">umentar el número de colmenas en un 20%</th>
+                    <th scope="row">Aumentar el número de colmenas en un 20%</th>
                   </tr>
               
                   </tr>
